--- a/src/app/comp/login/login.component.html
+++ b/src/app/comp/login/login.component.html
@@ -1,11 +1,44 @@
 <div class="d-flex min-vh-100 justify-content-center align-items-center login-form-container">
     <div class="card">
-        <h4 class="card-header">
-            <i class="bi-shield-lock me-2"></i>
-            {{ l10nphrase.login.title }}
+        <h4 class="card-header d-flex align-items-center">
+            <img src="/assets/android-icon-36x36.png" style="width: 32px; height: 32px;">
+            <span class="ms-3">{{ l10nphrase.login.title }}</span>
         </h4>
         <div class="card-body">
             <p class="card-text">{{ l10nphrase.login.unlockDescription }}</p>
+        </div>
+        <div class="card-body">
+            <form [formGroup]="inputs" (submit)="onSubmitForm()">
+                <div class="has-validation mb-3">
+                    <div
+                        [ngClass]="{'form-floating': true, 'is-invalid': inputs.controls.username.dirty && !inputs.controls.username.valid}">
+                        <input type="text" class="form-control" name="login-username" id="login-username"
+                            formControlName="username" [placeholder]="l10nphrase.login.usernameField.placeholder"
+                            autocomplete="username">
+                        <label for="login-username">{{ l10nphrase.login.usernameField.label }}</label>
+                    </div>
+                    <div class="invalid-feedback">
+                        {{ l10nphrase.login.usernameField.invalidFeedback }}
+                    </div>
+                </div>
+                <div class="has-validation mb-3">
+                    <div
+                        [ngClass]="{'form-floating': true, 'is-invalid': inputs.controls.password.dirty && !inputs.controls.password.valid}">
+                        <input type="password" class="form-control" name="login-password" id="login-password"
+                            formControlName="password" [placeholder]="l10nphrase.login.passwordField.placeholder"
+                            autocomplete="current-password">
+                        <label for="login-password">{{ l10nphrase.login.passwordField.label }}</label>
+                    </div>
+                    <div class="invalid-feedback">
+                        {{ l10nphrase.login.passwordField.invalidFeedback }}
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center ">
+                    <button type="submit" class="btn btn-primary">
+                        {{ loginBusy ? l10nphrase.login.submitBtnBusy : l10nphrase.login.submitBtn }}
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
