--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,33 @@
-@import 'bootstrap/scss/bootstrap';
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+
+$primary: #E12327;
+$secondary: $gray-600;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: $gray-100;
+$dark: $gray-900;
+
+$theme-colors: (
+    "primary": $primary,
+    "secondary": $secondary,
+    "success": $success,
+    "info": $info,
+    "warning": $warning,
+    "danger": $danger,
+    "light": $light,
+    "dark": $dark
+);
+
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 app-toasts {
     position: absolute;
     bottom: 0;
-    left: calc(50% - 240px);
-    width: 480px;
+    left: calc(50% - 175px);
+    width: 350px;
     z-index: 1020;
 
     ngb-toast {
