--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -19,23 +19,60 @@
             </ul>
         </div>
         <div class="d-flex align-items-center">
-            <form class="d-flex me-5" role="search">
+            <form class="d-flex me-5" role="search" [formGroup]="searchForm" (submit)="onSubmitSearch()">
                 <div class="input-group me-2">
                     <input class="form-control" type="search" [placeholder]="l10nphrase.navbar.searchPlaceholder"
-                        [attr.aria-label]="l10nphrase.navbar.searchBtn" style="min-width: 460px;">
+                        formControlName="phrase" name="navbar-search-phrase" id="navbar-search-phrase"
+                        [attr.aria-label]="l10nphrase.navbar.searchBtn" style="min-width: 460px;" autocomplete="off">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">{{ l10nphrase.navbar.searchOptions }}</button>
+                        data-bs-auto-close="outside" aria-expanded="false">{{
+                        l10nphrase.navbar.searchOptions
+                        }}</button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" [value]="true"
+                                    formControlName="searchConfig" id="navbar-search-config"
+                                    name="navbar-search-config">
+                                <label class="form-check-label" for="navbar-search-config">
+                                    {{ l10nphrase.search.topics.config }}
+                                </label>
+                            </div>
                         </li>
-                        <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" [value]="true"
+                                    formControlName="searchJobtypes" id="navbar-search-jobtypes"
+                                    name="navbar-search-jobtypes">
+                                <label class="form-check-label" for="navbar-search-jobtypes">
+                                    {{ l10nphrase.search.topics.jobtypes }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" [value]="true"
+                                    formControlName="searchPSet" id="navbar-search-parameterset"
+                                    name="navbar-search-parameterset">
+                                <label class="form-check-label" for="navbar-search-parameterset">
+                                    {{ l10nphrase.search.topics.parameterset }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" [value]="true"
+                                    formControlName="searchWorkflows" id="navbar-search-workflows"
+                                    name="navbar-search-workflows">
+                                <label class="form-check-label" for="navbar-search-workflows">
+                                    {{ l10nphrase.search.topics.workflows }}
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
-                <button class="btn btn-success" type="submit">{{ searchBusy ? l10nphrase.navbar.searchBtnBusy :
+                <button class="btn btn-success text-nowrap" [disabled]="searchBusy" type="submit">{{ searchBusy ?
+                    l10nphrase.navbar.searchBtnBusy :
                     l10nphrase.navbar.searchBtn }}</button>
             </form>
             <ul class="navbar-nav">
