--- a/src/app/comp/main/main.component.html
+++ b/src/app/comp/main/main.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-progressbar></app-progressbar>
 
 <div class="container-fluid pt-3 pb-5">
     <router-outlet></router-outlet>
